--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rss_reader",
   "version": "1.0.0",
-  "description": "Rss reader aplication.",
+  "description": "rss_educational_app",
   "main": "index.js",
   "engines": {
     "node": "4.4.7"
@@ -44,8 +44,7 @@
     "type": "git"
   },
   "keywords": [
-    "rss",
-    "reader"
+    "rss_educational_app"
   ],
   "devDependencies": {
     "bower": "^1.7.9",
